# SynQL

./: .gitignore  README.md
runner/: README  README.md  batch.py  joint.py  topic.py
runner/configs/: batch_example.json  joint_example.json  topic_example.json
runner/local_data/: kaggle_create_statements.json  kaggle_templates.json  kaggle_topics.json  spider_create_statements.json  spider_templates.json  spider_topics.json
synql/: pyproject.toml  run.sh  runner.py
synql/runner/: filter.py  joint.py  topic.py
synql/runner/configs/: batch_example.json  joint_example.json  topic_example.json
synql/synql/: __init__.py  evaluator.py  extractor.py  format.py  helper.py  inspector.py  loader.py  main.py  prompts.py  synth.py  transform.py  visualizer.py
synql/synql/configs/: generation_qqp_joint_kaggle_all_queries.json  generation_qqp_joint_spider_all_queries_batch.json  generation_seed_kaggle_topics.json
synql/synql/data/: prompts.json
synql/synql/requestor/: __init__.py  api_request_batch_processor.py  api_request_parallel_processor.py
synql/tests/: conftest.py  test_loader.py  test_main.py  test_request_batch.py  test_synthesizer.py
