[tool.poetry]
name = "synql"
version = "0.1.0"
description = "SynQL: Synthetic Topic- and Template-based Data Generation for low-resource SQL Parsing"
authors = ["Denver Baumgartner <denver@semiotic.ai>"]
readme = "README.md"

exclude = [
    "synql/example.ipynb"
]

[tool.poetry.dependencies]
python = "^3.12"
sqlglot = "20.11.0"
networkx = "^3.2.1"
nltk = "^3.8.1"
sqlparse = "^0.4.4"
pandas = "^2.2.1"
rapidfuzz = "^3.7.0"
datasets = "^2.18.0"
transformers = "^4.39.3"
matplotlib = "^3.8.4"
tiktoken = "^0.6.0"
python-dotenv = "^1.0.1"
openai = "^1.25.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"